--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,7 +30,10 @@ header > .cabelhaco {
   height: 60px;
   outline: none;
   border: none;
-  background-color: #f5f5f5;
+  background: #e0e0e0;
+
+
+
   border-radius: 8px;
   padding: 0 50px 0 18px;
 }
