--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,57 +1,63 @@
-.prodCard {
-  max-width: 1200px;
-  width: 100%;
+.prod-card-bg {
+  background-color: #f8f8f8;
+  padding: 2rem 0;
 }
 
-.prodCard > .first {
+.prod-card {
+  max-width: 1200px;
+  width: 100%;
+  margin: auto;
+}
+
+.prod-card-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
 }
 
-.prodCard > .first > h2 {
+.prod-card-header h2 {
   font-size: 24px;
-  color: #474747;
+  color: #1a1919;
 }
 
-.prodCard > .first > a {
+.prod-card-header a {
   text-decoration: none;
   color: #c92071;
   font-size: 1rem;
   display: flex;
+  align-items: center;
 }
 
-.prodCard > .first > a:hover {
+.prod-card-header a:hover {
   text-decoration: underline;
 }
 
-.prodCard > .first > a > img {
+.prod-card-header a img {
   height: 18px;
-  width: 90;
-  margin-right: 50px;
+  margin-left: 8px;
 }
 
-.prodCard > .second {
+.prod-card-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
 }
 
-.prodCard > .second > div {
+.prod-card-item {
   width: 100%;
   height: 360px;
   border-radius: 8px;
-  line-height: 1.7rem;
 }
 
-.prodCard > .second > div > div {
-  width: 252px;
-  height: 260px;
+.prod-card-image {
+  width: 100%;
+  height: 240px;
   cursor: pointer;
+  position: relative;
 }
 
-.prodCard > .second > div > div > img {
+.prod-card-image img {
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -59,38 +65,46 @@
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
 }
 
-.prodCard > .second > div > p {
-  font-size: 12px;
-  color: #8f8f8f;
-  font-weight: 700;
+.prod-card-descPorc {
+  position: absolute;
+  background-color: #e7ff86;
+  border-radius: 20px;
+  font-weight: bold;
+  color: #000000;
+  font-size: 0.8rem;
+  bottom: 13rem;
+  left: 10px;
+  padding: 5px 10px;
 }
 
-.prodCard > .second > div > .prices {
+.prod-card-name {
+  font-size: 14px;
+  font-weight: bold;
+  color: #474747;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.prod-card-desc {
+  font-size: 24px;
+  color: #3f3d3d;
+}
+
+.prod-card-prices {
   display: flex;
-  flex-direction: row;
   gap: 0.5rem;
   height: 1.3rem;
 }
 
-.prodCard > .second > div > .prices > .price {
+.prod-card-price {
   color: #8f8f8f;
   text-decoration: line-through;
+  font-size: 20px;
 }
 
-.descPorc {
-  position: relative;
-  background-color: #e7ff86;
-  max-width: 24%;
-  border-radius: 20px;
-  color: #474747 !important;
-  font-size: 0.8rem !important;
-  bottom: 20em;
-  left: 0.5em;
-  padding-left: 2px;
-  display: flex;
-  justify-content: center;
-}
-
-.second > img {
-  position: absolute;
+.prod-card-priceDisc {
+  color: #000000;
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 20px;
 }
