Ajustando o cabeçalho da página de login com novos componentes e estilos

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,21 +50,37 @@ header > .cabelhaco > div {
   align-items: center;
   gap: 1rem;
 }
-header > .cabelhaco > div > a {
+header > .cabelhaco > div > .cadastre {
   color: #474747;
   text-decoration: none;
   font-size: 16px;
   width: 6.3rem;
 }
+header > div > .entrar {
+  color: rgb(248, 248, 248);
+}
+
 header > .cabelhaco > div > a:hover {
   text-decoration: underline;
 }
-header > .cabelhaco > div > button {
-  width: 114px;
-  height: 40px;
-  border: none;
-  color: white;
+
+.entrar {
+  width: 6.5rem;
+  height: 48px;
   background-color: #c92071;
+  color: #f7f7fc;
+  font-weight: bold;
+  border: none;
   border-radius: 8px;
   cursor: pointer;
+  transition: 0.6s;
+  text-decoration: none;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.entrar:hover {
+  background-color: #a1195b;
 }
