--- a/src/components/SectionLogin/SectionLogin.css
+++ b/src/components/SectionLogin/SectionLogin.css
@@ -1,76 +1,121 @@
 .section-login {
-    background: linear-gradient(to right, #B5B6F2, #EFEFFF);
-    height: 800px;
+    background: linear-gradient(to right, #b5b6f2, #efefff);
+    margin: auto;
+    height: 100vh;
     max-width: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-
-.forms-content {
-   padding-top: 20px;
-    background-color: #f8f8f8;
-    /* width: 580px; */
-    height: 500px;
+    align-items: center;
+  }
+  
+  .section-login > div {
+    width: 100%;
+    max-width: 1200px; /* Controla a largura máxima do conteúdo */
+  }
+  
+  .forms-content {
+    padding: 30px;
+    background-color: #ffffff;
+    flex: 1; /* Faz o formulário ocupar o mesmo espaço da imagem */
+    height: auto;
+    margin-left: 100px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(209, 202, 202, 0.1);
+  }
+  
+  .image-sapatos {
+    flex: 1; /* Faz a imagem ocupar o mesmo espaço do formulário */
+    height: 100%;
     display: flex;
-    padding-left: 20px;
-}
-.form {
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px; /* Adiciona um pouco de espaço para a imagem não ficar muito próxima da borda */
+  }
+  
+  .image-sapatos img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garantir que a imagem cubra o espaço sem distorcer */
+    border-radius: 10px; /* Para manter a consistência com o formulário */
+  }
+  
+  .form {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-}
-
-.form h1 {
-    font-weight: 900;
-    font-size: 35px;
-}
-
-.form a {
+    gap: 1.1rem;
+  }
+  
+  .form h1 {
+    font-weight: 1000;
+    font-size: 28px;
+    color: #333;
+  }
+  
+  .form a {
     color: #000000;
-}
-.form a:hover {
-    color: #C92071;
-}
-
-
-.forms-content input {
-    display: flex;
-    width: 550px;
+    text-decoration: none;
+  }
+  
+  .form a:hover {
+    color: #c92071;
+  }
+  
+  .forms-content input {
+    width: 100%;
     height: 50px;
     border-radius: 5px;
-    border: none;
-    background-color: #efeff3;
-    padding: 20px;
+    border: 1px solid #ddd;
+    background-color: #f8f8f8;
+    padding: 0 20px;
     outline: none;
     font-size: 15px;
-}
-
-.form button {
-    width: 550px;
+  }
+  
+  .form button {
+    width: 100%;
     height: 50px;
-    color: #EFEFFF;
-    background-color: #C92071;
+    color: #ffffff;
+    background-color: #c92071;
     border: none;
     font-size: 18px;
     border-radius: 5px;
-}
-
-.login-rede-sociais {
+    cursor: pointer;
+  }
+  
+  .login-rede-sociais {
     margin-top: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
-}
-
-.icon-facebook {
-    height: 23px;
-}
-
-.image-sapatos img {
-    height: 500px;
-    transform: rotate(200deg);
-}
-
-
+  }
+  
+  .login-rede-sociais span {
+    color: #666;
+  }
+  
+  .icon-facebook,
+  .icon-google {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  
+  .social-icons-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .icon-google,
+  .icon-facebook {
+    width: 20px;
+    height: auto;
+    transition: transform 0.3s ease;
+  }
+  
+  .icon-google:hover,
+  .icon-facebook:hover {
+    transform: scale(0.9);
+  }
+  
