Atualizando gradientes de fundo para a seção de login e cadastro

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .color-bg{
-    background: linear-gradient(to right, #b5b6f2, #efefff);
+    background: linear-gradient(to right, #ededfd, #efefff);
     padding: 10px;
     font-weight: bold;
 }
